es-bs-base/scss/_nav.scss
// Base class
//
// Kickstart any navigation component with a set of style resets. Works with
// `<nav>`s, `<ul>`s or `<ol>`s.

.nav {
  display: flex;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

.nav-link {
  display: block;
  padding: $nav-link-padding-y $nav-link-padding-x;
  text-decoration: if($link-decoration == none, null, none);

  @include hover-focus() {
    text-decoration: none;
  }

  // Disabled state lightens text
  &.disabled {
    color: $nav-link-disabled-color;
    pointer-events: none;
    cursor: default;
  }
}

//
// Tabs
//

.nav-tabs {
  border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color;

  .nav-link {
    margin-bottom: -$nav-tabs-border-width;
    border: $nav-tabs-border-width solid transparent;
    @include border-top-radius($nav-tabs-border-radius);

    @include hover-focus() {
      border-color: $nav-tabs-link-hover-border-color;
    }

    &.disabled {
      color: $nav-link-disabled-color;
      background-color: transparent;
      border-color: transparent;
    }
  }

  .nav-link.active,
  .nav-item.show .nav-link {
    color: $nav-tabs-link-active-color;
    background-color: $nav-tabs-link-active-bg;
    border-color: $nav-tabs-link-active-border-color;
  }

  .dropdown-menu {
    // Make dropdown border overlap tab border
    margin-top: -$nav-tabs-border-width;
    // Remove the top rounded corners here since there is a hard edge above the menu
    @include border-top-radius(0);
  }
}


//
// Pills
//

.nav-pills {
  .nav-link {
    @include border-radius($nav-pills-border-radius);
  }

  .nav-link.active,
  .show > .nav-link {
    color: $nav-pills-link-active-color;
    background-color: $nav-pills-link-active-bg;
  }
}


//
// Justified variants
//

.nav-fill {
  > .nav-link,
  .nav-item {
    flex: 1 1 auto;
    text-align: center;
  }
}

.nav-justified {
  > .nav-link,
  .nav-item {
    flex-basis: 0;
    flex-grow: 1;
    text-align: center;
  }
}


// Tabbable tabs
//
// Hide tabbable panes to start, show them when `.active`

.tab-content {
  > .tab-pane {
    display: none;
  }
  > .active {
    display: block;
  }
}

//
// EnergySage Global Navigation
//

$desktop-min-width: 992px;
$mobile-max-width: $desktop-min-width - 1;

// Overlay that is displayed on navbar hovers on desktop, menu open on mobile
// pull overlay up to avoid it from getting covered by other DOM elements
.content-overlay {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1000;
  display: none;
  width: 100%;
  height: 100%;
  background: rgba(64, 64, 64, .45);
}

.nav-es-global {
  // default should be size 14px according to figma
  font-size: $font-size-75;

  // add a background so veil goes under the nav
  background-color: $white;

  // override es-ds default
  .btn-link {
    color: $body-color;
  }

  // dropdown-menu items should be default size 14px
  .dropdown-menu {
    font-size: $font-size-75;
  }

  // All links should have font-weight-normal (weight 400)
  // TODO: This overrides styles for `eyebrow`
  a {
    font-weight: $font-weight-normal;
  }

  // Adjust default nav-link styling
  &.navbar-light {
    .navbar-nav {
      .nav-item.nav-link {
        color: $gray-900;

        &:hover {
          color: $black;
          text-decoration: underline;
        }
      }
    }
  }

  // Hide the default BS4 expansion indicator
  .dropdown-toggle::after {
    content: none;
  }

  // Hide elements only needed for the mobile navigation
  .dropdown-label,
  .menu-checkbox,
  .menu-header,
  .menu-toggle,
  .expand-icon {
    display: none;
  }

  // Override default blue background on hover and click
  .dropdown-item:hover,
  .dropdown-item:active {
    background: none;
  }

  .dropdown-cta-right {
    line-height: 1.3;

    .eyebrow {
      font-size: $font-size-50;
      color: $orange !important;
    }

    .cta-link {
      font-size: $font-size-75;
      color: $gray-900;
      text-decoration: none;

      &:hover {
        color: $gray-1200;
      }
    }
  }

  // On Desktop a hovers display the dropdowns
  @media only screen and (min-width: $desktop-min-width) {
    // pull navbar up to avoid overlay from getting covered by other DOM elements
    z-index: 1000;

    // Allow dropdown content to take up the full width of the page
    .dropdown-full-page {
      position: static;
    }

    // Full expand top level nav's topics section
    .dropdown-menu-full-page {
      top: 65%;
      width: 100%;
      padding-bottom: 0;
    }

    // eyebrow copied from es-ds class, but override for letter spacing and only display on lg+ viewports
    .eyebrow-lg {
      font-size: $font-size-100;
      font-weight: $font-weight-bolder;
      color: $gray;
      text-transform: uppercase;
      letter-spacing: 0.05em;
    }

    // Show top headers down chevron icon
    .nav-item {
      .top-header-icon {
        transform: rotate(0deg);
      }
    }

    // Show dropdown and hover colors on nav-item hover in desktop view
    // Show top headers up chevron icon on nav-item hover
    .nav-item:hover {
      .dropdown-menu {
        display: block;
      }

      .top-header-icon {
        transform: rotate(180deg);
      }
    }

    .nav-item.top-header {
      user-select: none;
    }

    // Top header hover should be gray
    .nav-item.top-header:hover {
      background: $gray-150;

      // Top header menu background should be gray
      .dropdown-menu {
        background: $gray-150;
      }
    }

    // Position person icon and dropdown menu
    .icon-dropdown {
      position: relative;
      display: inline-block;
    }

    // Fix top header logged in/logged out state section with a fixed width
    .icon-dropdown .container {
      width: 225px;
    }

    // Fix width of the dropdown menu on person icon hover
    .icon-dropdown .dropdown-menu {
      width: 250px;
    }

    // Style first name with truncation and default not shown
    .icon-dropdown .dropdown-toggle .first-name {
      display: none;
      max-width: 200px;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    .dropdown-menu-primary {
      position: relative;
      display: flex;
      justify-content: space-between;
    }

    .dropdown-list {
      display: flex;
      flex-wrap: wrap;
      padding-left: 0;
      list-style: none;
    }

    .dropdown-cta-right {
      flex-basis: 270px;
      flex-grow: 0;
      flex-shrink: 0;
    }

    .topic-group {
      flex-basis: 277px;
      flex-grow: 0;
      flex-shrink: 0;
      margin-right: 15px;
      margin-bottom: 2rem;
    }

    .dropdown-item {
      white-space: normal !important;
    }

    .dropdown-cta-bottom {
      align-items: center;
      height: 78px;
      color: $white;
      background-color: $gray-900;

      .dropdown-cta-bottom--inner {
        display: flex;
        justify-content: space-between;
        margin: 0 auto;
      }

      .btn-lg {
        width: 250px;
      }
    }
  }

  // A lot of custom styles for the mobile navigation menu
  @media only screen and (max-width: $mobile-max-width) {
    // Set collapsed navbar height
    height: 56px;

    // Force navigation items to align to the top and avoid conflict with other components on the page
    // Ensure menus are visible above overlay
    .top-level-menu {
      z-index: 1000;
    }

    // Allow the dropdowns to overlap each other
    .dropdown {
      position: unset;
    }

    // Position the menu at the top (leave some room for the header -- this seems hacky, could we set this to top:0?)
    // Make menu scrollable, prevent it from making the page longer
    // Prevent horizontal scrolling on menu
    .dropdown-menu {
      top: 64px;
      display: flex !important;
      max-height: 100%;
      padding: 0;
      overflow: scroll;
    }

    .dropdown-menu-primary {
      flex-direction: column;
      width: 100%;
      border-style: none;

      .nav-item {
        margin: 0;
      }
    }

    .dropdown-list {
      padding: 0;
    }

    // Prevent horizontal scrolling on menu
    .dropdown-menu-full-page {
      display: flex !important;
      border-style: none;
    }

    // Style the label as a proper tappable block target
    .dropdown-label {
      display: block;
      cursor: pointer;
    }

    // Show chevrons on mobile
    .expand-icon {
      display: flex;
    }

    // Style rows in hamburger, add bottom border
    .nav-item {
      align-items: center;
      height: 64px;
      margin: 0 15px;
      border-bottom: 1px solid $gray-300 !important;
    }

    // Override default margin to allow centered titles
    .dropdown-label.nav-link {
      margin-bottom: 0;
    }

    // Style the menu for mobile navigation bit but use translate to keep it off screen
    .menu {
      position: absolute;
      top: 0;
      left: 0;
      flex-direction: column;
      width: 100%;
      min-width: 300px;
      max-width: 540px;
      height: 100%;
      min-height: 100vh;
      max-height: 100%;
      background: #fff;
      transition: transform 0.2s;
      transform: translate3d(-100%, 0, 0);

      ul {
        overflow: scroll;

        li:last-child {
          margin-bottom: 120px;
        }
      }
    }

    // Avoid top level nav's subtopics level menu from laying on its topic level menu
    .submenu {
      position: fixed;
      z-index: 2;
    }

    // The menu after any checked checkboxes is translated on screen
    .menu-checkbox:checked + .menu {
      transform: translate3d(0, 0, 0);
    }

    // The menu header
    .menu-header {
      display: flex;
      align-items: center;
      width: 100%;
      height: 64px;
      max-height: 64px;
      font-weight: bolder;
      border-bottom: 1px solid $gray-300;
    }

    // This is a generic placeholder button for open/close/back in the mobile menu
    .menu-toggle {
      display: flex;
      vertical-align: center;
      cursor: pointer;
    }

    // Override BS4 defaults for consistency
    .menu {
      ul,
      li {
        display: block;
        width: 100%;
        border-style: none;
      }
      li {
        display: flex;
        justify-content: space-between;
      }
    }
  }
}

